hphp/hack/test/typecheck/strict_switch/missing_null.php
<?hh

function missing_null(null $x): void {
  switch ($x) {
    case 42:
      return;
  }
}
